--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -13,7 +13,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="kwitter.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
@@ -29,7 +29,7 @@
 		<h3 id="user_name" class="color_white"></h3>
 		<div class="form-group input_div_room_page">
 			<label>#Add Room:</label>
-<input type="text" id="room name" class="form-control" placeholder="room name"
+<input type="text" id="room_name" class="form-control" placeholder="room name"
 		</div>
 		<button onclick="addroom()" class="btn btn-success">#Add Room</button>
 		<h3 class="color_white">#TRENDINGROOMS</h3>
